--- a/Experiment_1.ipynb
+++ b/Experiment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhNGk9ksI+DIdGVMVREcNO",
+      "authorship_tag": "ABX9TyP4nj5Op0rG/zN1FSCa/O/e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,11 +70,11 @@
         "\n",
         "debug = True # Only runs 20 batches per epoch for debugging\n",
         "\n",
-        "# dataset parameters\n",
-        "im_size             = 28\n",
+        "# CIFAR dataset parameters\n",
+        "im_size             = 32\n",
         "padded_im_size      = 32\n",
+        "input_ch            = 3\n",
         "C                   = 10\n",
-        "input_ch            = 1\n",
         "\n",
         "# Optimization Criterion\n",
         "loss_name = 'CrossEntropyLoss'\n",
@@ -106,15 +106,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e63b0ac0-f89c-46f5-f6e6-a20c284d80c2"
+        "outputId": "0cca98c0-6d40-494c-d960-2187225655ca"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "R1cW3l0Du0Nq"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -320,9 +320,9 @@
         "\n",
         "    # tr{Sw Sb^-1}\n",
         "    Sw = Sw.cpu().numpy()\n",
-        "    Sb = Sb.cpu().numpy()\n",
-        "    eigvec, eigval, _ = svds(Sb, k=C-1)\n",
-        "    inv_Sb = eigvec @ np.diag(eigval**(-1)) @ eigvec.T\n",
+        "    Sb = Sb.cpu().double()  # Extra precision for small eigenvalues; modified orig.\n",
+        "    eigvec, eigval, _ = torch.svd_lowrank(Sb, q=C-1)\n",
+        "    inv_Sb = eigvec @ torch.diag(1/eigval) @ eigvec.T\n",
         "    graphs.Sw_invSb.append(np.trace(Sw @ inv_Sb))\n",
         "\n",
         "    # ||W^T - M_||\n",
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "9tYX9Fr9u3Ki"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -351,7 +351,7 @@
       "source": [
         "model = models.resnet18(pretrained=False, num_classes=C)\n",
         "model.conv1 = nn.Conv2d(input_ch, model.conv1.weight.shape[0], 3, 1, 1, bias=False) # Small dataset filter size used by He et al. (2015)\n",
-        "model.maxpool = nn.MaxPool2d(kernel_size=1, stride=1, padding=0)\n",
+        "model.maxpool = nn.Identity()\n",
         "model = model.to(device)\n",
         "\n",
         "class features:\n",
@@ -364,16 +364,16 @@
         "classifier = model.fc\n",
         "classifier.register_forward_hook(hook)\n",
         "\n",
-        "transform = transforms.Compose([transforms.Pad((padded_im_size - im_size)//2),\n",
-        "                                transforms.ToTensor(),\n",
-        "                                transforms.Normalize(0.1307,0.3081)])\n",
+        "transform = transforms.Compose([transforms.ToTensor(),\n",
+        "                                transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261))\n",
+        "                                ])\n",
         "\n",
         "train_loader = torch.utils.data.DataLoader(\n",
-        "    datasets.MNIST('../data', train=True, download=True, transform=transform),\n",
+        "    datasets.CIFAR10('../data', train=True, download=True, transform=transform),\n",
         "    batch_size=batch_size, shuffle=True)\n",
         "\n",
         "analysis_loader = torch.utils.data.DataLoader(\n",
-        "    datasets.MNIST('../data', train=True, download=True, transform=transform),\n",
+        "    datasets.CIFAR10('../data', train=True, download=True, transform=transform),\n",
         "    batch_size=batch_size, shuffle=True)\n",
         "\n",
         "if loss_name == 'CrossEntropyLoss':\n",
@@ -546,10 +546,9 @@
       "metadata": {
         "id": "tsXs-Zw35TW2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 489
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bc929fc-6ca6-4d84-f194-a1f76b854928"
+        "outputId": "768d4ac6-6d47-4437-fc74-b0e63e83e4ff"
       },
       "execution_count": null,
       "outputs": [
@@ -561,22 +560,9 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
             "  warnings.warn(msg)\n",
-            "Train\t\tEpoch: 1 [1/469 (0%)] \tBatch Loss: 2.373073 \tBatch Accuracy: 0.078125:   0%|          | 1/469 [00:12<1:35:11, 12.20s/it]"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-643c646216b9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_epoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m     \u001b[0mlr_scheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-24-fd8d4dbccbef>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, criterion, device, num_classes, train_loader, optimizer, epoch)\u001b[0m\n\u001b[1;32m     13\u001b[0m           \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    624\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             )\n\u001b[0;32m--> 626\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    627\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    824\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "100%|██████████| 170M/170M [00:01<00:00, 98.8MB/s]\n",
+            "Train\t\tEpoch: 1 [21/391 (5%)] \tBatch Loss: 2.338626 \tBatch Accuracy: 0.179688:   5%|▌         | 21/391 [03:55<1:09:11, 11.22s/it]\n",
+            "Analysis Mean\tEpoch: 1 [5/391 (1%)]:   1%|▏         | 5/391 [00:18<23:09,  3.60s/it]"
           ]
         }
       ]
