NEED to implement layer tracking before paid compute

--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcWpjLOUuy185AP5WpXZpQ",
+      "authorship_tag": "ABX9TyM/Lj2ywQOL5u4DKBoshPNG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,18 +45,10 @@
         "- Measure their empirical rank and SVD spectrum.\n",
         "- Check if late-stage training updates concentrate into a low-rank subspace, coinciding with the emergence of NC.\n",
         "\n",
-        "Goal:\n",
+        "Goal: evaluate whether global parameter (weight) updates show low-rank at the same time as neural collapse; [what does SVD spectrum show specifically?]. Ensure that the low-rank parameter updates occur in the classifier and the layer before.\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "CHANGES:\n",
-        "(1) checkpointing only works for Experiment 1 (tracker object not included for storage reasons)\n",
-        "(2) last training batch is skipped by training loop and training, analysis dataloader.\n",
-        "(3) [todo] [optional] Store layer-specific rank tracking for penultimate layer, classifier (ultimate) layer.\n",
-        "\n",
-        "\n",
-        "Meanwhile, work on Experiment 3.\n",
         "\n",
         "\n"
       ],
@@ -67,7 +59,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "GOAL: Implement layer-specific rank saving in UpdateTracker"
+        "NOTE: Checkpointing only works for Experiment 1 (tracker object not included in checkpoint for storage reasons)\n",
+        "\n",
+        "Todo: Implement layer-specific rank saving in UpdateTracker"
       ],
       "metadata": {
         "id": "DzmtsmJtkp4S"
@@ -465,7 +459,7 @@
         "    self.update_ranks = []\n",
         "    self.update_spectra = []\n",
         "\n",
-        "    # Decomposition\n",
+        "    # Decomposition -> redundant?\n",
         "    self.LNC1 = []\n",
         "    self.LNC23 = []\n",
         "    self.Lperp = []\n",
@@ -1557,7 +1551,7 @@
         "id": "6wl235LVmwGV",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 360
+          "height": 428
         },
         "outputId": "93b083b5-479e-4c4e-9e88-4194421f8bc1"
       },
