Ready for paid compute! Two minor optimizations: (a) checkpointing can be reduced, since it doesn't store experiment data (b) data saving can be checkpointed, so we have df files even if runtime disconnects at key epochs

--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -35,50 +35,13 @@
         "Goal: evaluate whether global parameter (weight) updates show low-rank at the same time as neural collapse. Ensure that the low-rank parameter updates occur in the classifier and the layer before.\n",
         "\n",
         "\n",
+        "## Implementation Notes\n",
         "\n",
+        "- Finite differences are tracked in UpdateTracker, reflecting momentum effects. Gradients are not tracked in this implementation.\n",
         "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DzmtsmJtkp4S"
-      },
-      "source": [
-        "NOTE: Finite differences are tracked in UpdateTracker, reflecting momentum effects. Gradients were NOT tracked separately in this iteration.\n",
+        "- Checkpointing saves model state, but does not save graphs or UpdateTracker (Experiment 1+2 data) objects due to storage concerns.\n",
         "\n",
-        "NOTE: Checkpointing only works for Experiment 1. Tracker object stores global deltas for parameter update rank analysis (~15 GB by Epoch 350), which is unreasonable to checkpoint.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Todo:\n",
-        "1. Full dry run\n",
-        "-> prune epoch_list\n",
-        "\n",
-        "2. Data checks\n",
-        "-> I am collecting all the necessary data? I am collecting the data *correctly* (calculating what I say I'm calculating)\n",
-        "\n",
-        "-> I am building the necessary graphs?\n",
-        "\n",
-        "-> I am ready to process the data? contingency plan once results are in\n",
-        "\n",
-        "3. Data saving\n",
-        "-> *Test Experiment 2 data with debug=False run. *\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "4. Implement randomizedSVD, sliding-window UpdateTracker.\n",
-        "-> can save all deltas for key epochs\n",
-        "\n",
-        "5/1: Validating with dry run.\n",
-        "\n",
-        "\n",
-        "If UpdateTracker works as intended, then work on data/graph validation. If data/graph validated, begin dry runs (debug=False) and work on Experiment 3 validation.\n",
-        "Experiment1+2 may need to be run in full before Experiment 3 can be fully validated/run.\n",
-        "Need to individually validate that NC occurs under our setup (epochs, lr, lr_decay, momentum/weight_decay) for this dataset.\n",
+        "- UpdateTracker uses sliding window approach for SVD calculations due to memory issues. Window size can be toggled with max_history parameter.\n",
         "\n",
         "\n"
       ]
@@ -405,7 +368,7 @@
       "outputs": [],
       "source": [
         "class UpdateTracker:\n",
-        "    def __init__(self, model, max_history=10, max_components=100):\n",
+        "    def __init__(self, model, max_history=30, max_components=100):\n",
         "        # Configuration\n",
         "        self.max_components = max_components\n",
         "        self.max_history = max_history  # Only keep recent updates to save memory\n",
@@ -1768,7 +1731,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiaqxrBPzLO32sJQtO4CAr",
+      "authorship_tag": "ABX9TyMEcuMKLQi7fFOuJH6ZnyPK",
       "include_colab_link": true
     },
     "kernelspec": {
