--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -48,13 +48,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YNKXMPjQuc0C",
-        "outputId": "33841f4f-93ca-4e0d-8c89-8c59dec86c68"
+        "outputId": "2e24335d-31ae-4351-ae85-19e9a62baf56"
       },
       "outputs": [
         {
@@ -71,6 +71,9 @@
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
+        "data_path = '/content/drive/MyDrive/Colab Notebooks/experiment_data/'\n",
+        "os.makedirs(data_path, exist_ok=True)\n",
+        "\n",
         "overwrite_checkpoint = True\n",
         "\n",
         "import psutil\n",
@@ -134,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "R1cW3l0Du0Nq"
       },
@@ -178,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "metadata": {
         "id": "9tYX9Fr9u3Ki"
       },
@@ -363,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "metadata": {
         "id": "reGN3Qbo81pz"
       },
@@ -482,8 +485,6 @@
         "\n",
         "        return effective_ranks, sv, effective_ranks_layer, layer_svs\n",
         "\n",
-        "\n",
-        "\n",
         "class Graphs:\n",
         "  def __init__(self):\n",
         "    self.accuracy     = []\n",
@@ -522,26 +523,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "collapsed": true,
         "id": "tsXs-Zw35TW2",
-        "outputId": "ca7ea3cb-3e14-47d6-fc50-ae513e84b5db"
+        "outputId": "ae663189-c327-4236-d5a3-1b7e59c36f10"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
-            "  warnings.warn(msg)\n",
-            "Train\t\tEpoch: 1 [21/390 (5%)] \tBatch Loss: 2.496814 \tBatch Accuracy: 0.148438:   5%|▌         | 21/390 [04:00<1:10:33, 11.47s/it]\n"
+            "Train\t\tEpoch: 1 [21/390 (5%)] \tBatch Loss: 2.496814 \tBatch Accuracy: 0.148438:   5%|▌         | 21/390 [03:44<1:05:52, 10.71s/it]\n"
           ]
         },
         {
@@ -555,11 +551,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Analysis Mean\tEpoch: 1 [21/390 (5%)]:   5%|▌         | 21/390 [01:22<24:04,  3.91s/it]\n",
-            "Analysis Metrics\tEpoch: 1 [21/390 (5%)]:   5%|▌         | 21/390 [01:23<24:27,  3.98s/it]\n",
-            "<ipython-input-17-bc908ee776df>:269: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "Analysis Mean\tEpoch: 1 [21/390 (5%)]:   5%|▌         | 21/390 [01:11<20:51,  3.39s/it]\n",
+            "Analysis Metrics\tEpoch: 1 [21/390 (5%)]:   5%|▌         | 21/390 [01:09<20:19,  3.30s/it]\n",
+            "<ipython-input-15-8d6504282a4f>:266: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n",
-            "<ipython-input-17-bc908ee776df>:292: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "<ipython-input-15-8d6504282a4f>:289: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n"
           ]
         },
@@ -728,7 +724,7 @@
           "name": "stdout",
           "text": [
             "Experiment data saved at epoch 1\n",
-            "Epoch 1: Memory usage: 3542.31 MB\n",
+            "Epoch 1: Memory usage: 3155.14 MB\n",
             "Tracker deltas: 0 updates stored\n",
             "Checkpoint saved at epoch 1\n"
           ]
@@ -737,22 +733,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Train\t\tEpoch: 2 [5/390 (1%)] \tBatch Loss: 2.418601 \tBatch Accuracy: 0.156250:   1%|▏         | 5/390 [01:01<1:19:28, 12.39s/it]"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-bc908ee776df>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_epoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m     \u001b[0mlr_scheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-14-fd8d4dbccbef>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, criterion, device, num_classes, train_loader, optimizer, epoch)\u001b[0m\n\u001b[1;32m     13\u001b[0m           \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    624\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             )\n\u001b[0;32m--> 626\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    627\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    824\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "Train\t\tEpoch: 2 [19/390 (5%)] \tBatch Loss: 2.298731 \tBatch Accuracy: 0.109375:   5%|▍         | 19/390 [03:16<1:02:53, 10.17s/it]"
           ]
         }
       ],
@@ -800,11 +781,10 @@
         "graphs = Graphs()\n",
         "cur_epochs = []\n",
         "start_epoch = 1\n",
-        "checkpoint_path = '/content/drive/MyDrive/checkpoint.pth'\n",
         "\n",
         "if not overwrite_checkpoint:\n",
         "  try:\n",
-        "      checkpoint = torch.load(checkpoint_path, weights_only=False) # note: only use trusted source (checkpoint from MyDrive)\n",
+        "      checkpoint = torch.load(data_path + 'checkpoint.pth', weights_only=False) # note: only use trusted source (checkpoint from MyDrive)\n",
         "      model.load_state_dict(checkpoint['model_state_dict'])\n",
         "      optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
         "      lr_scheduler.load_state_dict(checkpoint['lr_scheduler'])\n",
@@ -822,6 +802,7 @@
         "\n",
         "\n",
         "    # === Experiment 2 data collection ===\n",
+        "    update_epochs = list(range(1, epoch + 1)) # used for graphs, data saving\n",
         "    global_rank, global_sv, layer_ranks, layer_svs = tracker.compute_update_rank(model)\n",
         "    graphs.update_ranks.append(global_rank)\n",
         "    for layer_name in tracked_layers:\n",
@@ -837,6 +818,7 @@
         "        graphs.update_spectra.append(None)\n",
         "        for layer_name in tracked_layers:\n",
         "            graphs.layer_singular_values[layer_name].append(None)\n",
+        "            # graphs.layer_update_ranks[layer_name].append({'0.95': np.nan, '0.99': np.nan})\n",
         "\n",
         "\n",
         "    if epoch in analysis_epochs:\n",
@@ -958,10 +940,8 @@
         "        plt.legend()\n",
         "        plt.grid(True)\n",
         "\n",
-        "        ## Experiment 2 Figures\n",
-        "        # Update rank\n",
-        "        update_epochs = list(range(1, epoch + 1))\n",
         "\n",
+        "        ## Experiment 2 Figures\n",
         "        plt.figure(13)\n",
         "        # Filter out NaNs from IPCA early epochs\n",
         "        valid_global_95 = [\n",
@@ -979,7 +959,6 @@
         "        plt.ylabel('Effective Rank of Parameter Updates')\n",
         "        plt.title('Experiment 2: Parameter Update Rank')\n",
         "\n",
-        "        # Layer-Specific Update Ranks\n",
         "        plt.figure(14)\n",
         "        for layer_name in tracked_layers:\n",
         "            # Filter NaNs\n",
@@ -1076,38 +1055,38 @@
         "            'conv_update_rank_95': [graphs.layer_update_ranks['layer4.1.conv2.weight'][e-1]['0.95'] for e in cur_epochs],\n",
         "            'conv_update_rank_99': [graphs.layer_update_ranks['layer4.1.conv2.weight'][e-1]['0.99'] for e in cur_epochs]\n",
         "        })\n",
-        "        df.to_csv('experiment1_experiment2_data.csv', index=False)\n",
+        "        df.to_csv(data_path + 'experiment1_experiment2_data.csv', index=False)\n",
         "\n",
         "        # Save Experiment 1 singular values\n",
-        "        np.save('feature_svs.npy', graphs.singular_values)\n",
-        "        np.save('mean_svs.npy', graphs.mean_singular_values)\n",
-        "        np.save('class_svs.npy', np.array(graphs.class_singular_values, dtype=object)) # Save as dtype=object\n",
+        "        np.save(data_path + 'feature_svs.npy', graphs.singular_values)\n",
+        "        np.save(data_path + 'mean_svs.npy', graphs.mean_singular_values)\n",
+        "        np.save(data_path + 'class_svs.npy', np.array(graphs.class_singular_values, dtype=object))\n",
         "\n",
         "        # Save Experiment 2 data for all epochs\n",
         "        df_exp2 = pd.DataFrame({\n",
         "            'epoch': update_epochs,\n",
-        "            'update_rank_95': [x['0.95'] for x in graphs.update_ranks],\n",
-        "            'update_rank_99': [x['0.99'] for x in graphs.update_ranks],\n",
-        "            'fc_update_rank_95': [x['0.95'] for x in graphs.layer_update_ranks['fc.weight']],\n",
-        "            'fc_update_rank_99': [x['0.99'] for x in graphs.layer_update_ranks['fc.weight']],\n",
-        "            'conv_update_rank_95': [x['0.95'] for x in graphs.layer_update_ranks['layer4.1.conv2.weight']],\n",
-        "            'conv_update_rank_99': [x['0.99'] for x in graphs.layer_update_ranks['layer4.1.conv2.weight']]\n",
+        "            'update_rank_95': [x.get('0.95', np.nan) for x in graphs.update_ranks],\n",
+        "            'update_rank_99': [x.get('0.99', np.nan) for x in graphs.update_ranks],\n",
+        "            'fc_update_rank_95': [x.get('0.95', np.nan) for x in graphs.layer_update_ranks['fc.weight']],\n",
+        "            'fc_update_rank_99': [x.get('0.99', np.nan) for x in graphs.layer_update_ranks['fc.weight']],\n",
+        "            'conv_update_rank_95': [x.get('0.95', np.nan) for x in graphs.layer_update_ranks['layer4.1.conv2.weight']],\n",
+        "            'conv_update_rank_99': [x.get('0.99', np.nan) for x in graphs.layer_update_ranks['layer4.1.conv2.weight']]\n",
         "        })\n",
-        "        df_exp2.to_csv('experiment2_data.csv', index=False)\n",
+        "        df_exp2.to_csv(data_path + 'experiment2_data.csv', index=False)\n",
         "\n",
         "        # Experiment 2 singular values (Note: saved as objects due to jagged arrays)\n",
         "        valid_update_spectra = [sv for sv in graphs.update_spectra if sv is not None]\n",
-        "        np.save('global_update_spectra.npy', np.array(valid_update_spectra, dtype=object))\n",
+        "        np.save(data_path + 'global_update_spectra.npy', np.array(valid_update_spectra, dtype=object))\n",
         "\n",
         "        for layer_name in tracked_layers:\n",
         "            valid_layer_svs = [sv for sv in graphs.layer_singular_values[layer_name] if sv is not None]\n",
-        "            np.save(f'{layer_name}_singular_values.npy', np.array(valid_layer_svs, dtype=object))\n",
+        "            np.save(data_path + f'{layer_name}_singular_values.npy', np.array(valid_layer_svs, dtype=object))\n",
         "\n",
         "        # Save figures\n",
         "        figures_to_save = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]  # All\n",
         "        for fig_num in figures_to_save:\n",
         "            plt.figure(fig_num)\n",
-        "            plt.savefig(f'figure_{fig_num}_epoch_{epoch}.pdf', bbox_inches='tight', dpi=300)\n",
+        "            plt.savefig(data_path + f'figure_{fig_num}_epoch_{epoch}.pdf', bbox_inches='tight', dpi=300)\n",
         "            plt.close(fig_num)\n",
         "\n",
         "        print(f\"Experiment data saved at epoch {epoch}\")\n",
@@ -1132,7 +1111,7 @@
         "            # 'tracker': tracker, # too large; checkpoint for Experiment 3\n",
         "            'cur_epochs': cur_epochs\n",
         "        }\n",
-        "        torch.save(checkpoint, checkpoint_path)\n",
+        "        torch.save(checkpoint, data_path + 'checkpoint.pth')\n",
         "        print(f\"Checkpoint saved at epoch {epoch}\")\n",
         "        gc.collect()\n",
         "        # torch.cuda.empty_cache() # if using GPU\n",
@@ -1143,7 +1122,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIstWvWECIKKbzGmmDb0tc",
+      "authorship_tag": "ABX9TyM+/PZfnfT5dcfUY7v5M8kT",
       "include_colab_link": true
     },
     "kernelspec": {
