--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -48,20 +48,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YNKXMPjQuc0C",
-        "outputId": "60540472-e6e3-4bb1-e3a1-5bc5924e3cea"
+        "outputId": "96ff6e22-558b-4de8-f49e-0186fa392b9f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -92,7 +92,7 @@
         "from torchvision import datasets, transforms\n",
         "from IPython import embed\n",
         "\n",
-        "debug = False # Only runs 20 batches per epoch for debugging\n",
+        "debug = True # Only runs 20 batches per epoch for debugging\n",
         "\n",
         "# Random seed\n",
         "seed                = 42\n",
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "R1cW3l0Du0Nq"
       },
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "9tYX9Fr9u3Ki"
       },
@@ -207,7 +207,7 @@
         "\n",
         "            # Collect all features for rank analysis\n",
         "            if computation == 'Mean':\n",
-        "              all_features.append(h.cpu().detach())\n",
+        "              all_features.append(h.detach())\n",
         "\n",
         "            # during calculation of class means, calculate loss\n",
         "            if computation == 'Mean':\n",
@@ -225,7 +225,7 @@
         "\n",
         "                # Collect class-specific features for SVD analysis\n",
         "                if computation == 'Mean':\n",
-        "                  class_features[c].append(h_c.cpu().detach())\n",
+        "                  class_features[c].append(h_c.detach())\n",
         "\n",
         "                if computation == 'Mean':\n",
         "                    # update class means\n",
@@ -274,9 +274,10 @@
         "            # Feature rank analysis\n",
         "            all_features_tensor = torch.cat(all_features, dim=0)\n",
         "\n",
-        "            # Compute feature rank using *randomized* SVD\n",
-        "            U, S, _ = randomized_svd(all_features_tensor.cpu().numpy(), n_components=100)\n",
-        "            S = torch.from_numpy(S).to(device)\n",
+        "            # Compute feature rank using *torch SVD*\n",
+        "            with torch.no_grad():\n",
+        "                _, S, _ = torch.linalg.svd(all_features_tensor, full_matrices=False)\n",
+        "                S = S[:100]  # Only keep top 100 components\n",
         "\n",
         "            # Calculate effective rank\n",
         "            normalized_sv = S / torch.sum(S)\n",
@@ -295,7 +296,7 @@
         "            class_sv_lists = []\n",
         "            for c in range(C):\n",
         "                if len(class_features[c]) > 0:\n",
-        "                    class_feat = torch.cat(class_features[c], dim=0)\n",
+        "                    class_feat = torch.cat(class_features[c], dim=0).to(device)\n",
         "                    # Center the features\n",
         "                    class_feat = class_feat - mean[c].unsqueeze(0)\n",
         "                    # Compute SVD\n",
@@ -336,10 +337,12 @@
         "    graphs.norm_W_CoV.append((torch.std(W_norms)/torch.mean(W_norms)).item())\n",
         "\n",
         "    # tr{Sw Sb^-1}\n",
-        "    Sw = Sw.cpu().double()\n",
+        "    Sw = Sw.double()\n",
         "    Sw += 1e-8 * torch.eye(Sw.shape[0], device=Sw.device) # add jitter for numerical sability\n",
-        "    Sb = Sb.cpu().double()  # Extra precision for small eigenvalues; modified orig.\n",
-        "    eigvec, eigval, _ = torch.svd_lowrank(Sb, q=C-1)\n",
+        "    Sb = Sb.double()  # Extra precision for small eigenvalues; modified orig.\n",
+        "    eigvec, eigval, _ = torch.linalg.svd(Sb, full_matrices=False)\n",
+        "    eigvec = eigvec[:, :C-1]\n",
+        "    eigval = eigval[:C-1]\n",
         "    inv_Sb = eigvec @ torch.diag(1/eigval) @ eigvec.T\n",
         "    graphs.Sw_invSb.append(torch.trace(Sw @ inv_Sb).item())\n",
         "\n",
@@ -361,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "reGN3Qbo81pz"
       },
@@ -518,14 +521,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 584
+          "base_uri": "https://localhost:8080/"
         },
         "id": "tsXs-Zw35TW2",
-        "outputId": "c48974b6-b694-4477-c405-e656e623d66d"
+        "outputId": "b97d27f9-b4e0-49c2-d75b-efd6d6199ac0"
       },
       "outputs": [
         {
@@ -536,34 +538,8 @@
             "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
             "  warnings.warn(msg)\n",
-            "100%|██████████| 170M/170M [00:03<00:00, 47.4MB/s]\n",
-            "Train\t\tEpoch: 1 [390/390 (100%)] \tBatch Loss: 1.651967 \tBatch Accuracy: 0.375000: 100%|██████████| 390/390 [00:21<00:00, 18.38it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "First epoch - initializing trackers (no updates yet)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Analysis Mean\tEpoch: 1 [390/390 (100%)]: 100%|██████████| 390/390 [00:14<00:00, 26.10it/s]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-1c8f41b3d63c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0manalysis_epochs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mcur_epochs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0manalysis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraphs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion_summed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manalysis_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;31m# === Graphs ===\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-3-423d9874640f>\u001b[0m in \u001b[0;36manalysis\u001b[0;34m(graphs, model, criterion_summed, device, num_classes, loader)\u001b[0m\n\u001b[1;32m    114\u001b[0m                     \u001b[0mclass_feat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m                     \u001b[0;31m# Center the features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m                     \u001b[0mclass_feat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclass_feat\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m                     \u001b[0;31m# Compute SVD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m                     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cpu!"
+            "100%|██████████| 170M/170M [00:01<00:00, 93.4MB/s]\n",
+            "Train\t\tEpoch: 1 [3/390 (1%)] \tBatch Loss: 3.379754 \tBatch Accuracy: 0.132812:   1%|          | 3/390 [00:35<1:12:49, 11.29s/it]"
           ]
         }
       ],
@@ -942,8 +918,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMU6qb7EwtN6y7FQtLjmrKb",
+      "authorship_tag": "ABX9TyNFCYfJJHUT2Xw1WInC84d2",
       "include_colab_link": true
     },
     "kernelspec": {
