Cleaner data_path integration

--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -48,7 +48,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import os\n",
+        "from google.colab import drive\n",
+        "\n",
+        "data_path = os.environ.get(\"DATA_PATH\", None)\n",
+        "\n",
+        "# If not set, use Drive or local Colab storage\n",
+        "if data_path is None:\n",
+        "    try:\n",
+        "        # Uncomment below to use Drive\n",
+        "        drive.mount('/content/drive')\n",
+        "        data_path = '/content/drive/MyDrive/Colab Notebooks/experiment_data/'\n",
+        "    except Exception as e:\n",
+        "        print(f\"Failed to mount Drive: {e}\")\n",
+        "        data_path = '/content/data/'\n",
+        "        print(\"Falling back to local storage\")\n",
+        "\n",
+        "os.makedirs(data_path, exist_ok=True)"
+      ],
+      "metadata": {
+        "id": "29ie0YVzzTMS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "YNKXMPjQuc0C",
         "colab": {
@@ -69,14 +96,8 @@
         "import torch\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "from google.colab import drive\n",
-        "import psutil\n",
-        "import os\n",
-        "drive.mount('/content/drive')\n",
-        "data_path = '/content/drive/MyDrive/Colab Notebooks/experiment_data/'\n",
-        "os.makedirs(data_path, exist_ok=True)\n",
-        "\n",
         "import gc\n",
+        "import psutil\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import torch.nn as nn\n",
@@ -131,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "R1cW3l0Du0Nq"
       },
@@ -175,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "9tYX9Fr9u3Ki"
       },
@@ -224,7 +245,7 @@
         "\n",
         "                # Collect class-specific features for SVD analysis\n",
         "                if computation == 'Mean':\n",
-        "                  class_features[c].append(h_c.detach())\n",
+        "                    class_features[c].append(h_c.detach())\n",
         "\n",
         "                if computation == 'Mean':\n",
         "                    # update class means\n",
@@ -363,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "reGN3Qbo81pz"
       },
@@ -1725,7 +1746,23 @@
           "text": [
             "Train\t\tEpoch: 31 [21/390 (5%)] \tBatch Loss: 1.275886 \tBatch Accuracy: 0.507812:   5%|▌         | 21/390 [02:27<43:04,  7.01s/it]\n",
             "Train\t\tEpoch: 32 [21/390 (5%)] \tBatch Loss: 1.248411 \tBatch Accuracy: 0.585938:   5%|▌         | 21/390 [02:29<43:52,  7.13s/it]\n",
-            "Train\t\tEpoch: 33 [3/390 (1%)] \tBatch Loss: 1.149456 \tBatch Accuracy: 0.585938:   1%|          | 3/390 [00:20<43:46,  6.79s/it]"
+            "Train\t\tEpoch: 33 [21/390 (5%)] \tBatch Loss: 1.291308 \tBatch Accuracy: 0.492188:   5%|▌         | 21/390 [02:23<41:54,  6.81s/it]\n",
+            "Train\t\tEpoch: 34 [11/390 (3%)] \tBatch Loss: 1.696058 \tBatch Accuracy: 0.312500:   3%|▎         | 11/390 [01:16<43:51,  6.94s/it]"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-44a165ebb906>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_epoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m     \u001b[0mlr_scheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-fd8d4dbccbef>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, criterion, device, num_classes, train_loader, optimizer, epoch)\u001b[0m\n\u001b[1;32m     13\u001b[0m           \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    624\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             )\n\u001b[0;32m--> 626\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    627\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m         )\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    824\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -2008,11 +2045,11 @@
         "\n",
         "\n",
         "    # === Data Save ===\n",
-        "    def ensure_numpy(tensor_or_array):\n",
-        "      \"\"\"Convert tensor to numpy array if it's a tensor, otherwise return as is.\"\"\"\n",
-        "      if isinstance(tensor_or_array, torch.Tensor):\n",
-        "          return tensor_or_array.detach().cpu().numpy()\n",
-        "      return tensor_or_array\n",
+        "    # def ensure_numpy(tensor_or_array):\n",
+        "    #   \"\"\"Convert tensor to numpy array if it's a tensor, otherwise return as is.\"\"\"\n",
+        "    #   if isinstance(tensor_or_array, torch.Tensor):\n",
+        "    #       return tensor_or_array.detach().cpu().numpy()\n",
+        "    #   return tensor_or_array\n",
         "\n",
         "    if epoch in [1, 2, 3, 5, 10, 15, 30, 50, 100, 150, 200, 250, 300, epochs]:\n",
         "        # Data from analysis epochs\n",
@@ -2110,7 +2147,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4Zo7x9hUMcnh7fPrq8LLr",
+      "authorship_tag": "ABX9TyMhDxGv/x0z++BwezD3wHb0",
       "include_colab_link": true
     },
     "kernelspec": {
