Experiment 3a/3b sorted. Full fine-tuning, data visuals will be implemented following initial results

--- a/Experiment_3.ipynb
+++ b/Experiment_3.ipynb
@@ -126,7 +126,7 @@
         "weight_decay        = 5e-4 # too high?\n",
         "\n",
         "# analysis parameters\n",
-        "epochs              = 2\n",
+        "epochs              = 20\n",
         "ranks               = [1,2,4,8,16]\n",
         "lora_alpha          = 16\n",
         "lora_dropout        = 0.05\n",
@@ -237,8 +237,8 @@
         "        if computation == 'Mean':\n",
         "            for c in range(C):\n",
         "                mean[c] /= N[c]\n",
-        "                M = torch.stack(mean).T\n",
-        "                graphs.mean = mean\n",
+        "            M = torch.stack(mean).T\n",
+        "            graphs.mean = mean\n",
         "            loss /= sum(N)\n",
         "\n",
         "            # Feature rank analysis\n",
@@ -1188,7 +1188,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Built in to above code"
+      ],
       "metadata": {
         "id": "1RRJXSw-fBhh"
       },
@@ -1273,7 +1275,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkPAhjdzt9R4A+fENzzQUY",
+      "authorship_tag": "ABX9TyP1WK7SDNzcrYOTaAfLBSAx",
       "include_colab_link": true
     },
     "kernelspec": {
