Running from 125. large_checkpoint is only 2.6 GB at full window (max_history=50).

--- a/Experiment_1+2.ipynb
+++ b/Experiment_1+2.ipynb
@@ -825,6 +825,31 @@
             "Train\t\tEpoch: 149 [390/390 (100%)] \tBatch Loss: 0.002724 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 20.10it/s]\n",
             "Train\t\tEpoch: 150 [390/390 (100%)] \tBatch Loss: 0.002404 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.88it/s]\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Experiment data saved at epoch 150\n",
+            "Epoch 150: Memory usage: 3120.41 MB\n",
+            "Tracker deltas: 50 updates stored\n",
+            "GPU memory allocated: 3.48 GB\n",
+            "GPU memory cached: 19.11 GB\n",
+            "Checkpoint saved at epoch 150\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Train\t\tEpoch: 151 [390/390 (100%)] \tBatch Loss: 0.001743 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.86it/s]\n",
+            "Train\t\tEpoch: 152 [390/390 (100%)] \tBatch Loss: 0.001766 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.85it/s]\n",
+            "Train\t\tEpoch: 153 [390/390 (100%)] \tBatch Loss: 0.002095 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.92it/s]\n",
+            "Train\t\tEpoch: 154 [390/390 (100%)] \tBatch Loss: 0.002373 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.90it/s]\n",
+            "Train\t\tEpoch: 155 [390/390 (100%)] \tBatch Loss: 0.002651 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 20.03it/s]\n",
+            "Train\t\tEpoch: 156 [390/390 (100%)] \tBatch Loss: 0.001638 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.81it/s]\n",
+            "Train\t\tEpoch: 157 [390/390 (100%)] \tBatch Loss: 0.002748 \tBatch Accuracy: 1.000000: 100%|██████████| 390/390 [00:19<00:00, 19.86it/s]"
+          ]
         }
       ],
       "source": [
